# MLOps_spine_disease

./: .gitignore  README.md
01_mlopszc_EDA_model_training/: MLmodel  README.md  final_model.ipynb  final_model.py  mlflowclient.ipynb  requirements.txt
03_mlopszc_web_deployment/: Dockerfile  Pipfile  README.md  predict.py  test.py  vert.ipynb  xgboost.ipynb
04_mlopszc_monitoring/: README.md  baseline_model_spine_data.ipynb  data_drift_suite.html  evidently_metrics_calculation.py  requirements.txt  spine_data_quality_report.html  vert.ipynb
05_mlopszc_best_practices/: .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
05_mlopszc_best_practices/.github/workflows/: cd.yml  ci.yml
05_mlopszc_best_practices/src/: __init__.py  data_processor.py  model_trainer.py  predictor.py
05_mlopszc_best_practices/terraform/: main.tf  outputs.tf  variables.tf
05_mlopszc_best_practices/tests/: __init__.py  test_data_processor.py  test_integration.py  test_model_trainer.py  test_predictor.py
mlopszc_proj_orc/: README.md
mlopszc_proj_orc/spine_mage_pipeline/spine_pipeline/: metadata.yaml
mlopszc_proj_orc/spine_mage_pipeline/spine_pipeline/data_loaders/: load_data.py
mlopszc_proj_orc/spine_mage_pipeline/spine_pipeline/pipelines/spine_disease_prediction/: metadata.yaml
mlopszc_proj_orc/spine_mage_pipeline/spine_pipeline/transformers/: preprocess_data.py  train_model.py
